--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 DATABASE_URL="mongodb+srv://kieren:kieren@cluster0.j5yd1pi.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT_AUTH_JWT_SECRET"
 NEXTAUTH_SECRET="NEXT_AUTH_SECRET"
+NEXTAUTH_URL="https://the-owlery-7s5xdjzuh-khussey45.vercel.app/"
